--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
+requires = ["hatchling", "hatch-vcs", "hatch-cython"]
 build-backend = "hatchling.build"
 
 [project]
@@ -58,11 +58,34 @@ version-file = "src/linear_dag/_version.py"
 include = ["src/"]
 exclude = ["docs/"]
 
+[tool.hatch.build.targets.wheel.hooks.cython]
+dependencies = ["hatch-cython"]
+
 [tool.hatch.envs.default]
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
 ]
+
+[tool.hatch.build.targets.wheel.hooks.cython.options]
+includes = ["src/"]
+include_numpy = true
+include_pyarrow = false
+
+compile_args = [
+  # single string
+  "-v",
+  # by platform
+  { platforms = ["linux", "darwin"], arg = "-Wcpp" },
+  # by platform & arch
+  { platforms = "darwin", arch = "x86_64", arg = "-arch x86_64" },
+  { platforms = ["darwin"], arch = "arm64", arg = "-arch arm64" },
+  # with pep508 markers
+  { platforms = ["darwin"], arch = "x86_64", arg = "-I/usr/local/opt/llvm/include", depends_path = true, marker = "python_version <= '3.10'"  },
+]
+directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }
+compile_kwargs = { }
+
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
