moved tests to test subfolder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # version is auto-built by hatch, not need to store it...
 src/linear_dag/_version.py
+src/linear_dag/*.c
 
 # just a symlink to treeseq data
 data
