--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,9 @@ directives = { boundscheck = false, nonecheck = false, language_level = 3, bindi
 [build.targets.wheel.hooks.cython.options.files]
 include = [
   "trios.pyx",
-  "solve.pyx"
+  "solve.pyx",
+  "data_structures.pyx",
+  "brick_graph.pyx"
 ]
 
 [tool.hatch.envs.default.scripts]
