--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ directives = { boundscheck = false, nonecheck = false, language_level = 3, bindi
 [build.targets.wheel.hooks.cython.options.files]
 include = [
   "trios.pyx",
+  "recombination.pyx",
   "solve.pyx",
   "data_structures.pyx",
   "brick_graph.pyx"
@@ -106,7 +107,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.9", "3.10", "3.11"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.lint]
 detached = true
