began initial command line tool; some prelim refactoring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ genotype = [
   "cyvcf2",
   "bed-reader[sparse]",
 ]
+[project.scripts]
+linear-dag = "linear_dag.cli:run_cli"
 
 [project.urls]
 Documentation = "https://github.com/unknown/linear-dag#readme"
