--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ classifiers = [
 ]
 dependencies = [
   "cython",
+  "cyvcf2",
+  "bed_reader[sparse]",
   "numpy",
   "scipy",
   "polars",
@@ -45,14 +47,9 @@ dependencies = [
 dnanexus = [
   "dxpy",
   "pyspark",
-  "cyvcf2",
-]
-genotype = [
-  "cyvcf2",
-  "bed-reader[sparse]",
 ]
 [project.scripts]
-linear-dag = "linear_dag.cli:run_cli"
+kodama = "linear_dag.cli:run_cli"
 
 [project.urls]
 Documentation = "https://github.com/unknown/linear-dag#readme"
