--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ classifiers = [
 dependencies = [
   "cython",
   "cyvcf2",
-  "bed_reader[sparse]",
+#  "bed_reader[sparse]",
   "numpy",
   "scipy>=1.14.1",
   "polars",
