minor update to fix weird dynamic versioning crash on install.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ allow-direct-references = true
 
 [tool.hatch.version]
 source = "vcs"
+raw-options = { search_parent_directories = true }
 
 [tool.hatch.build.hooks.vcs]
 version-file = "src/linear_dag/_version.py"
