--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,13 +40,14 @@ dependencies = [
   #  "bed_reader[sparse]",
   "numpy",
   "scipy>=1.14.1",
-  "polars",
+  "polars>=1.25.0",
   "jupyter",
   "psutil",
   "h5py>=3.13.0",
   "pytest>=8.4.1",
   "h5py",
   "memory_profiler",
+  "pyarrow>=21.0.0",
 ]
 
 [project.scripts]
