--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ plugins:
             show_symbol_type_heading: true
             show_symbol_type_toc: true
 
+# Public site navigation intentionally excludes non-site planning artifacts.
 nav:
   - Home: index.md
   - Getting Started:
