initial mkdoc scaffold

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,17 @@ Documentation = "https://github.com/unknown/linear-dag#readme"
 Issues = "https://github.com/unknown/linear-dag/issues"
 Source = "https://github.com/unknown/linear-dag"
 
+[project.optional-dependencies]
+docs = [
+  "hippogriffe==0.2.0",
+  "mkdocs==1.6.1",
+  "mkdocs-include-exclude-files==0.1.0",
+  "mkdocs-ipynb==0.1.0",
+  "mkdocs-material==9.6.7",
+  "mkdocstrings[python]==0.28.3",
+  "pymdown-extensions==10.14.3"
+]
+
 [tool.hatch.metadata]
 allow-direct-references = true
 
@@ -103,8 +114,8 @@ include = [
   "brick_graph.pyx",
   "data_structures.pxd",
   "digraph.pxd"
-]  
- 
+]
+
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
