--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,15 +37,12 @@ classifiers = [
 dependencies = [
   "cython",
   "cyvcf2",
-  #  "bed_reader[sparse]",
   "numpy",
   "scipy>=1.14.1",
   "polars>=1.25.0",
   "psutil",
   "h5py>=3.13.0",
   "pytest>=8.4.1",
-  "h5py",
-  "memory_profiler",
   "pyarrow>=21.0.0",
   "setuptools>=80.9.0",
 ]
@@ -113,7 +110,7 @@ include = [
   "digraph.pyx",
   "brick_graph.pyx",
   "data_structures.pxd",
-  "digraph.pxd"
+  "digraph.pxd",
 ]
 
 [tool.hatch.envs.default.scripts]
@@ -152,7 +149,7 @@ all = [
 ]
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py311"
 line-length = 120
 
 [tool.ruff.lint]
@@ -171,7 +168,7 @@ ignore = [
 ignore-init-module-imports = true
 
 [tool.ruff.lint.isort]
-known-first-party = ["linear-dag"]
+known-first-party = ["linear_dag"]
 combine-as-imports = true
 lines-between-types = 1
 known-local-folder = ["src"]
@@ -180,6 +177,7 @@ extra-standard-library = ["typing_extensions"]
 order-by-type = false
 
 [tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
