--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,3 @@
-site_name: linear-dag
-site_description: Compressed LinearARG analysis tools for biobank-scale genotype data.
-repo_url: https://github.com/quattro/linear-dag
-repo_name: quattro/linear-dag
-edit_uri: ""
-docs_dir: docs/site
-strict: false
-
 theme:
   name: material
   features:
@@ -29,11 +21,21 @@ theme:
     repo: fontawesome/brands/github
     logo: material/chart-bell-curve-cumulative
   favicon: _static/favicon.png
-  custom_dir: docs/_overrides
+  custom_dir: docs/site/_overrides
+
+site_name: linear-dag
+site_description: Compressed LinearARG analysis tools for biobank-scale genotype data.
+site_url: https://quattro.github.io/linear-dag
+
+repo_url: https://github.com/quattro/linear-dag
+repo_name: quattro/linear-dag
+edit_uri: ""  # No edit button, as some of our pages are in /docs and some in /examples via symlink, so it's impossible for them all to be accurate
+
+docs_dir: docs/site
+strict: true
 
 extra_javascript:
   - _static/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 extra_css:
@@ -53,7 +55,21 @@ markdown_extensions:
 
 plugins:
   - search:
-      separator: '[\\s\\-,:!=\\[\\]()"/]+|(?!\\b)(?=[A-Z][a-z])|\\.(?!\\d)|&[lg]t;'
+      separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'
+  - hippogriffe:
+      extra_public_objects:
+        - numpy.ndarray
+        - numpy.int32
+        - numpy.int64
+        - numpy.uint64
+        - numpy.bool_
+        - numpy.dtype
+        - numpy.typing.ArrayLike
+        - scipy.sparse.csc_matrix
+        - scipy.sparse.linalg.LinearOperator
+        - polars.DataFrame
+        - polars.LazyFrame
+        - polars.Series
   - mkdocstrings:
       handlers:
         python:
@@ -79,9 +95,16 @@ nav:
   - Getting Started:
       - Install: install.md
       - Quickstart: quickstart.md
-  - Usage:
-      - CLI: cli.md
-      - Python API: python-api.md
+  - CLI: cli.md
+  - Python API:
+    - Association / Heritability:
+      - 'api/assoc.md'
+      - 'api/heritability.md'
+    - Data Structures:
+      - 'api/linear_arg.md'
+      - 'api/parallel_ops.md'
   - Reference:
       - FAQ: faq.md
       - Contributing: contributing.md
+      - License: license.md
+      - Conduct: conduct.md
